# mcp-server-inspector

./: README.md  main.py  pyproject.toml
mcp_project/: mcp_chatbot.py  research_server.py  server_config.json
